fix color contrast issues

--- a/bigbluebutton-html5/client/stylesheets/toggleSwitch.css
+++ b/bigbluebutton-html5/client/stylesheets/toggleSwitch.css
@@ -41,14 +41,14 @@
   height: 1.5rem;
   padding: 0;
   border-radius: 2rem;
-  background-color: #B7E5DA;
+  background-color: #4E5A66;
   -webkit-transition: all 0.2s ease;
   -moz-transition: all 0.2s ease;
   transition: all 0.2s ease;
 }
 
 .react-toggle--checked .react-toggle-track {
-  background-color: #4DC0A2;
+  background-color: #4E5A66;
 }
 
 .react-toggle-track-check {
