--- a/bigbluebutton-html5/imports/ui/components/modal/fullscreen/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/modal/fullscreen/styles.scss
@@ -48,4 +48,6 @@
 }
 
 .confirm {
+  color: #fff !important;
+  background-color: $color-link !important;
 }
